--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 				class="panel active"
 				style="background-image: url('img/IMG_3.JPG')"
 			>
-				<h3>Exploring The World</h3>
+				<h3>Nevada</h3>
 			</div>
 			<div class="panel" style="background-image: url('img/IMG_2.JPG')">
-				<h3>Wild Forest</h3>
+				<h3>Nevada</h3>
 			</div>
 			<div class="panel" style="background-image: url('img/IMG_1.jpg')">
-				<h3>Sunny Beach</h3>
+				<h3>Nevada</h3>
 			</div>
 			<div class="panel" style="background-image: url('img/IMG_5.JPEG')">
-				<h3>City on Winter</h3>
+				<h3>Hawaii</h3>
 			</div>
 			<div class="panel" style="background-image: url('img/IMG_4.JPEG')">
-				<h3>Mountains -- Clouds</h3>
+				<h3>Hawaii</h3>
 			</div>
 		</div>
 
